[package]
name = "dted"
version = "0.1.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
edition = "2018"

description = "Tools for reading DTED files"

license = "MIT"

documentation = "https://docs.rs/dted/0.1.0/dted/"
repository = "https://github.com/fizyk20/dted.git"

[dependencies]
nom = "4.*"
failure = "0.1"
failure_derive = "0.1"
